add dataview and kanban

--- a/books/时间从来不语，却回答了所有问题.md
+++ b/books/时间从来不语，却回答了所有问题.md
@@ -1,12 +1,13 @@
 ---
 author: 季羡林
-status: TODO
+status: Todo
 rating: ⭐⭐⭐⭐
 priority: P2
 date: 2022-12-23
 tags:
 - book/literature
 cover: 9787550043657.png
+coverLink: "![[9787550043657.png]]"
 note: https://qileq.com/wiki/books/2023/9787550043657/
 ---
 
