--- a/books/福格行为模型.md
+++ b/books/福格行为模型.md
@@ -1,12 +1,13 @@
 ---
 author: B.J.福格
-status: DONE
+status: Todo
 rating: ⭐⭐⭐⭐⭐
 priority: P2
 date: 2022-12-17
 tags:
 - book/psychology
 cover: 9787557696672.png
+coverLink: "![[9787557696672.png]]"
 note: https://qileq.com/wiki/books/2022/9787557696672/
 ---
 
