--- a/books/纳瓦尔宝典.md
+++ b/books/纳瓦尔宝典.md
@@ -1,6 +1,6 @@
 ---
 author: ERIC JORGENSON
-status: DONE
+status: Done
 rating: ⭐⭐⭐⭐⭐
 priority: P1
 date: 2022-06-10
@@ -8,6 +8,7 @@ tags:
 - book/wealth
 - book/life
 cover: 9787521741124.png
+coverLink: "![[9787521741124.png]]"
 note: https://qileq.com/wiki/books/2022/9787521741124/
 ---
 
